docs/styles/styles.css
.fullscreen-scrollable-wrap {
    overflow: auto;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);

    display: flex;
    align-content: center;
    justify-content: center;
}

.middle-wrap {
    display: flex;
    justify-content: center;
    width: inherit;
}

.middle-content {
    width: 1000px;
}

.header {
    padding: 0 20px 0 20px;
    height: 80px;
    justify-content: space-between;
}

.logo {
    color: #ffffff;
    font-family: 'Roboto Slab', serif;
    font-size: 40px;
    font-weight: 100;
}

.logo span {
    font-weight: 300;
}

.username {
    color: #ffffff;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 300;

    padding-right: 20px;
}

.intro-wrap {
    display: flex;
    justify-content: space-between;
    padding-bottom: 20px;

    height: 330px;
}

.mega-logo {
    color: #ffffff;
    font-family: 'Open Sans', sans-serif;
    font-size: 50px;
    font-weight: 300;

    padding: 0 20px 0 20px;

    line-height: 100%;
}

.mega-logo-mega-text {
    font-weight: 800;
}

#plus {
    padding: 0;
}

#plus > svg {
    padding: 20px;
    stroke: #ffffff;
    stroke-width: 2px;
    fill: rgba(255, 255, 255, 0.5);
}

.search-bar-wrap {
    width: inherit;
    height: 70px;
}

.search-bar {
    display: flex;

    background: #ffffff;

    z-index: 10;
    position: relative;

    width: inherit;
    height: 70px;
    justify-content: space-between;
}

.search-bar-fixed {
    position: fixed;
    top: 0;
}

.search-text {
    border: none;
    outline: none;
    width: calc(100% - 70px);

    color: #747474;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 300;

    padding-left: 20px;
}

.search-text::-webkit-input-placeholder {
    color: #747474;
 }

.search-button {
    width: auto;
}

.content {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-flow: row wrap;
    align-content: center;

    z-index: -10px;
    padding: 10px;
}

.post-wrap {
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: auto;

    box-sizing: border-box;

    width: 50%;
    height: auto;

    padding: 10px;
}

.post {
    background: #ffffff;
    overflow: hidden;

}

:not(form).post {
    animation: post-appear 0.5s;
}

@keyframes post-appear {
    from {
        transform: translateY(500px);
        opacity: 0;
    }
    to {
        transform: translate(0);
        opacity: 1;
    }
}

.post img {
    width: 100%;
    height: auto;
    max-height: 50vh;
    object-fit: cover;
    display: block;
}

.post-caption {
    color: #464646;
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 50px;
    font-weight: 800;

    box-sizing: border-box;

    min-height: 40px;

    padding: 10px 20px 15px 20px;
}

.post textarea {
    display: block;
}

.info-bar {
    background: #EBEBEB;
    color: #747474;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 300;

    padding-left: 20px;
    min-height: 40px;
}

.info-bar span {
    margin-left: 5px;
    font-weight: 600;

    text-transform: uppercase;
}

.summary {
    color: #464646;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 300;

    box-sizing: border-box;

    padding: 10px 20px 15px 20px;
}

.tags-line {
    background: #D1D1D1;
    color: #8B8B8B;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 300;

    min-height: 30px;
    padding: 0 20px 0 20px;

    text-transform: lowercase;
}

.tags {
    width: 100%;

    font: inherit;
    color: inherit;
}

.tags-line > .tags > span {
    margin-right: 7px;
}

.show-more {
    /*background: #ffffff;*/
    justify-content: center;
    width: inherit;
    height: 70px;

    margin-top: auto;
    margin-bottom: 20px;

    /*color: #747474;*/
    color: white;
    font-family: 'Roboto Slab', serif;
    font-size: 20px;
    font-weight: 300;

    text-shadow: 0 2px 7px black;
}

.footer {
    /*position: fixed;
    bottom: 0;*/
    height: inherit;
    width: 100%;
    z-index: -20;

    color: #ffffff;
    background: #0e0e0e;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    color: #ffffff;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 300;
}

.footer > * {
    margin: 3px;
}

.footer > .author-name {
    font-style: italic;
    font-weight: 600;
}

.footer > a {
    font-family: "Roboto Slab", serif;
    text-decoration: none;
    color: white;
    text-shadow: 0 0 5px blue;
    font-weight: 600;
}

.footer > a:hover {
    color: blue;
}

#dragndrop {
    min-height: 100px;
    height: auto;

    color: #adadad;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-weight: 100;

    background: #c4c4c4;

    display: flex;
    justify-content: center;
    align-items: center;
}

#dragndrop img {
    max-height: none;
}

.form-button {
    display: inline-flex;
    align-items: center;
    margin: 0;
    width: initial;

    color: #747474;
    font-family: 'Roboto Slab', serif;
    font-size: 20px;
    font-weight: 300;

    padding: 0 20px 0 20px;
}

.form-button.add {
    color: green;
}

.form-button.discard {
    color: red;
}

.fullscreen-scrollable-wrap .middle-content {
    margin: auto 0 auto 0;
}

.login-form {
    color: #747474;
    background-color: white;
    font-family: 'Open Sans', sans-serif;
    text-align: center;
    margin: auto;

}

.login-form > input {
    text-align: center;
    padding: 0;
    margin-bottom: 20px;
}

.login-form > input::-webkit-input-placeholder {
    text-align: center;
}

.login-form > button {
    font-family: 'Open Sans', sans-serif;
    font-size: 30px;
    font-weight: 100;
    margin: 20px 0 40px 0;
    color: green;
}

.login-newnews {
    color: #747474;
    font-size: 50px;
    margin: 40px 0 40px 0;
}

.edit-content {
    height: 150px;
}

.appearing-image {
    width: 100%;
    transform-origin: top;
}

@media (max-width: 1000px){
    .middle-content {
        width: 100vw;
    }

    .fullscreen-scrollable-wrap .middle-content {
        margin-top: 0;
    }
}

@media (max-width: 800px) {
    .post-wrap {
        width: 100%;
        padding: 20px 0 20px 0;
    }

    .content {
        padding: 20px 0 20px 0;
    }

    .show-more {
        margin-top: -20px;
    }

    .intro-wrap {
        height: 200px;
    }

    .mega-logo div {
        font-size: 40px;
    }

    #dragndrop {
        display: none;
    }

    .middle-content.light-shadow .search-bar.v-align {
        box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
    }

    .edit-content {
        height: calc(100vh - 550px + 70px + 110px);
    }
}

@media (max-width: 550px) {
    .intro-wrap {
        justify-content: center;
        flex-wrap: wrap-reverse;
        align-content: center;
    }

    #plus {
        display: flex;
        flex-direction: column-reverse;
    }

    #plus br {
        display: none;
    }

    .mega-logo {
        display: none;
    }
}

